refactor: cleanup ActionMappers